# Forager_ai_django

./: pyproject.toml
myproject/: db.sqlite3
myproject/myapp/: models.py  services.py  urls.py  views.py
myproject/myapp/migrations/: 0001_initial.py
myproject/myapp/templates/: verify_email.html  view_result.html
myproject/myproject/: settings.py  urls.py
