[tool.poetry]
name = "forager-ai-django"
version = "0.1.0"
description = ""
authors = ["Ruslan2512 <ruslansirenko25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
myapp = "^0.1.dev0"
wemake-python-styleguide = "^0.18.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
